# FileFun

./: README.md  pyproject.toml  笔记.ipynb
html_fun/: bookmarks_2023_12_19.html  json_read.py
ipynb_read/: GUI自动化处理.ipynb  __init__.py  处理 PDF文档.ipynb  处理Excel电子表格.ipynb  处理Word文档.ipynb
src/: __init__.py
src/bin_oct_jinzhi/: __init__.py  jinzhi.py
src/chrome_driver_fun/: __init__.py  conftest.py  download_chrome_driver.py  selenium_fun_1.py  selenium_options.py  settings.py  test_chrome_driver_fun.py
src/chrome_driver_fun/common/: __init__.py  settings.py
src/html_fun/: Bookmarks.json  bookmarks_2023_123_19.html  json_read.py
src/json_to_yaml/: __init__.py  a.json  a.yaml  aa.py
src/os_fun/: __init__.py  os_os_chdir.py
src/pdf_fun/: __init__.py  pdf_def_fun.py  read_pdf_study.py
src/thread_fun/: __init__.py  thread_fun_one.py
src/toast_study/: __init__.py  win_sdk_study.py  win_toast_study.py
src/weixin_python_study/: __init__.py  weixin_python_study.py
