[project]
name = "FileFun"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "mila", email = "2451221415@qq.com"},
]
dependencies = [
    "weixin-python>=0.5.7",
    "pyzmq>=25.1.2",
    "jinja2>=3.1.2",
    "tornado>=6.4",
    "jupyter>=1.0.0",
    "pypdf>=3.17.3",
    "pypdf2>=3.0.1",
    "natsort>=8.4.0",
    "selenium>=4.16.0",
    "pytest>=7.4.3",
    "webdriver-manager>=4.0.1",
    "winsdk>=1.0.0b10",
    "win10toast>=0.9",
]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
package-type = "application"
